<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/basketball_court"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.android.courtcounter.MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="107dp"
        android:onClick="addOneTeamA"
        android:text="@string/free_trhow"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/team_a_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/team_a_textview"
        android:fontFamily="sans-serif-light"
        android:text="0"
        android:textColor="#000000"
        android:textSize="66sp" />

    <Button
        android:id="@+id/two_point_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="100dp"
        android:layout_marginRight="50dp"
        android:onClick="addTwoTeamA"
        android:text="@string/plus_two"
        android:textSize="10sp" />

    <Button
        android:id="@+id/two_point_a2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="100dp"
        android:layout_marginLeft="50dp"
        android:onClick="addTwoTeamA"
        android:text="@string/plus_two"
        android:textSize="10sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="180dp"
        android:onClick="addThreeTeamA"
        android:text="@string/plus_three"
        android:textSize="10sp" />


    <TextView
        android:id="@+id/team_b_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="12dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/team_b"
        android:textColor="#616161"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/team_a_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="12dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/team_a"
        android:textColor="#616161"
        android:textSize="20sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="107dp"
        android:onClick="addOneTeamB"
        android:text="@string/free_trhow"
        android:textSize="10sp" />

    <Button
        android:id="@+id/two_point_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="50dp"
        android:layout_marginTop="100dp"
        android:onClick="addTwoTeamB"
        android:text="@string/plus_two"
        android:textSize="10sp" />

    <Button
        android:id="@+id/two_point_b2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="100dp"
        android:onClick="addTwoTeamB"
        android:text="@string/plus_two"
        android:textSize="10sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:onClick="addThreeTeamB"
        android:text="@string/plus_three"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/team_b_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/team_b_textview"
        android:fontFamily="sans-serif-light"
        android:text="0"
        android:textColor="#000000"
        android:textSize="66sp" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="32dp"
        android:onClick="resetBoth"
        android:text="@string/reset"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/period"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/period"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/period_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/period"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-light"
        android:text="1"
        android:textColor="#000000"
        android:textSize="56sp" />

    <TextView
        android:id="@+id/b_fouls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/team_b_fouls"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/a_fouls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/b_fouls"
        android:layout_alignParentLeft="true"
        android:text="@string/team_a_fouls"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/a_fouls_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/b_fouls_number"
        android:layout_toRightOf="@+id/a_fouls"
        android:text="0"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/b_fouls_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/a_fouls"
        android:text="0"
        android:textSize="20sp" />

    <Button
        android:id="@+id/foul_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/team_a_score"
        android:layout_marginLeft="30dp"
        android:onClick="addOneFoulTeamA"
        android:text="@string/foul" />

    <Button
        android:id="@+id/foul_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/team_b_score"
        android:layout_marginRight="30dp"
        android:onClick="addOneFoulTeamB"
        android:text="@string/foul" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:onClick="nextPeriod"
        android:text="@string/next_period"
        android:textSize="10sp" />


</RelativeLayout>


